--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,57 @@
-name: Local CI/CD
+name: Build and Deploy
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
-    runs-on: self-hosted  # Runs on YOUR machine
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Build Docker image
-      run: |
-        docker build -t my-app:latest .
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
     
-    - name: Deploy locally
-      run: |
-        docker stop my-app || true
-        docker rm my-app || true
-        docker run -d -p 8080:80 --name my-app my-app:latest
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     
-    - name: Health check
-      run: |
-        sleep 5
-        curl -f http://localhost:8080 || echo "Health check failed"
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+          ${{ secrets.DOCKER_USERNAME }}/my-app:${{ github.sha }}
+    
+    - name: Deploy to Server
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          # Pull latest image
+          docker pull ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+          
+          # Stop and remove old container
+          docker stop my-app || true
+          docker rm my-app || true
+          
+          # Run new container
+          docker run -d \
+            -p 8080:80 \
+            --name my-app \
+            --restart unless-stopped \
+            ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+          
+          # Cleanup old images
+          docker image prune -f
