--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,31 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    #   with:
+    #     fetch-depth: 0   # important for SonarQube
+
+    # - name: Set up JDK (required for SonarQube Scanner)
+    #   uses: actions/setup-java@v4
+    #   with:
+    #     distribution: 'temurin'
+    #     java-version: '17'
+
+    # - name: SonarQube Scan (SAST)
+    #   uses: SonarSource/sonarqube-scan-action@v2
+    #   env:
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    #   with:
+    #     args: >
+    #       -Dsonar.projectKey=my-app
+    #       -Dsonar.projectName=my-app
+    #       -Dsonar.sources=.
+
+    # # Optional but highly recommended
+    # - name: SonarQube Quality Gate
+    #   uses: SonarSource/sonarqube-quality-gate-action@v1
+    #   env:
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -31,83 +56,3 @@ jobs:
         tags: |
           ${{ secrets.DOCKER_USERNAME }}/my-app:latest
           ${{ secrets.DOCKER_USERNAME }}/my-app:${{ github.sha }}
-    
-    # - name: Deploy to Server
-    #   uses: appleboy/ssh-action@v1.0.0
-    #   with:
-    #     host: ${{ secrets.SERVER_HOST }}
-    #     username: ${{ secrets.SERVER_USER }}
-    #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-    #     script: |
-    #       # Pull latest image
-    #       docker pull ${{ secrets.DOCKER_USERNAME }}/my-app:latest
-          
-    #       # Stop and remove old container
-    #       docker stop my-app || true
-    #       docker rm my-app || true
-          
-    #       # Run new container with Prometheus labels
-    #       docker run -d \
-    #         -p 8080:3000 \
-    #         --name my-app \
-    #         --restart unless-stopped \
-    #         --label "prometheus.io/scrape=true" \
-    #         --label "prometheus.io/port=3000" \
-    #         --label "prometheus.io/path=/metrics" \
-    #         ${{ secrets.DOCKER_USERNAME }}/my-app:latest
-          
-    #       # Deploy Prometheus if not running
-    #       if ! docker ps --format '{{.Names}}' | grep -q prometheus; then
-    #         echo "📊 Setting up Prometheus monitoring..."
-            
-    #         # Create Prometheus directory
-    #         mkdir -p ~/prometheus
-            
-    #         # Create Prometheus config
-    #         cat > ~/prometheus/prometheus.yml << 'EOF'
-    #         global:
-    #           scrape_interval: 15s
-            
-    #         scrape_configs:
-    #           - job_name: 'my-app'
-    #             static_configs:
-    #               - targets: ['host.docker.internal:8080']
-    #             metrics_path: '/metrics'
-    #             scrape_interval: 10s
-            
-    #           - job_name: 'prometheus'
-    #             static_configs:
-    #               - targets: ['localhost:9090']
-    #         EOF
-            
-    #         # Run Prometheus
-    #         docker run -d \
-    #           -p 9090:9090 \
-    #           --name prometheus \
-    #           -v ~/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml \
-    #           prom/prometheus:latest
-    #       fi
-          
-    #       # Deploy Grafana if not running
-    #       if ! docker ps --format '{{.Names}}' | grep -q grafana; then
-    #         echo "📈 Setting up Grafana dashboard..."
-            
-    #         # Create Grafana directory
-    #         mkdir -p ~/grafana
-            
-    #         # Run Grafana
-    #         docker run -d \
-    #           -p 3000:3000 \
-    #           --name grafana \
-    #           -e "GF_SECURITY_ADMIN_PASSWORD=admin" \
-    #           -e "GF_INSTALL_PLUGINS=grafana-piechart-panel" \
-    #           grafana/grafana:latest
-    #       fi
-          
-    #       # Cleanup old images
-    #       docker image prune -f
-          
-    #       echo "✅ Deployment successful!"
-    #       echo "🌐 Your app: http://localhost:8080"
-    #       echo "📊 Prometheus: http://localhost:9090"
-    #       echo "📈 Grafana: http://localhost:3000 (admin/admin)"
