--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,16 +42,15 @@ jobs:
     #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
+      uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3
     - name: Login to Docker Hub
-      uses: docker/login-action@v3
+      uses: docker/login-action@3227f5311cb93ffd14d13e65d8cc400d30f4dd8a
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
     - name: Build and push Docker image
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@8c1e8f8e5bf845ba3773a14f3967965548a2341e
       with:
         context: .
         push: true
