--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,14 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+    
+    #Scan Dockerfile with Hadolint
+    - name: Lint Dockerfile (Hadolint)
+      uses: hadolint/hadolint-action@2332a7b74a6de0dda2e2221d575162eba76ba5e5  # v3.3.0
+      with:
+        dockerfile: Dockerfile
+        failure-threshold: error
+
     #   with:
     #     fetch-depth: 0   # important for SonarQube
 
@@ -41,15 +49,34 @@ jobs:
     #   env:
     #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     
+    #Build image
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3
     - name: Login to Docker Hub
-      uses: docker/login-action@3227f5311cb93ffd14d13e65d8cc400d30f4dd8a
+      uses: docker/login-action@3227f5311cb93ffd14d13e65d8cc400d30f4dd8a  # v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
     - name: Build and push Docker image
+      uses: docker/build-push-action@8c1e8f8e5bf845ba3773a14f3967965548a2341e # v3
+      with:
+        context: .
+        push: false
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+          ${{ secrets.DOCKER_USERNAME }}/my-app:${{ github.sha }}
+      #Scan the image with Trivy
+    - name: Scan Docker image with Trivy
+      uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8
+      with:
+        image-ref: my-app:scan
+        format: table
+        exit-code: 1
+        severity: CRITICAL,HIGH
+
+        #Push image only if scan passes
+    - name: Push Docker image
       uses: docker/build-push-action@8c1e8f8e5bf845ba3773a14f3967965548a2341e
       with:
         context: .
