--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,8 @@ jobs:
     #   env:
     #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     
-    #Build image
+    #Docker login
+    
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3
     - name: Login to Docker Hub
@@ -58,15 +59,20 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     
-    - name: Build and push Docker image
+    #Build image
+
+    - name: Build Docker image
       uses: docker/build-push-action@8c1e8f8e5bf845ba3773a14f3967965548a2341e # v3
       with:
         context: .
         push: false
         tags: |
+          my-app:scan
           ${{ secrets.DOCKER_USERNAME }}/my-app:latest
           ${{ secrets.DOCKER_USERNAME }}/my-app:${{ github.sha }}
+
       #Scan the image with Trivy
+
     - name: Scan Docker image with Trivy
       uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8
       with:
@@ -75,8 +81,9 @@ jobs:
         exit-code: 1
         severity: CRITICAL,HIGH
 
-        #Push image only if scan passes
+      #Push image only if scan passes  ##push only if Trivy passes
     - name: Push Docker image
+      if: success() 
       uses: docker/build-push-action@8c1e8f8e5bf845ba3773a14f3967965548a2341e
       with:
         context: .
