--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
     #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     
     #Docker login
-    
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3
     - name: Login to Docker Hub
@@ -67,7 +67,6 @@ jobs:
         context: .
         push: false
         tags: |
-          my-app:scan
           ${{ secrets.DOCKER_USERNAME }}/my-app:latest
           ${{ secrets.DOCKER_USERNAME }}/my-app:${{ github.sha }}
 
@@ -76,7 +75,7 @@ jobs:
     - name: Scan Docker image with Trivy
       uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8
       with:
-        image-ref: my-app:scan
+        image-ref: ${{ secrets.DOCKER_USERNAME }}/my-app:latest
         format: table
         exit-code: 1
         severity: CRITICAL,HIGH
